Refactor: batch board and post summary assembly